# reed

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Taskfile.yml  _typos.toml  build.rs
docs/rationale/: 0001_architecture.md
src/: config.rs  file_type.rs  highlight.rs  images.rs  input.rs  main.rs  mermaid.rs  theme.rs  viewer.rs
syntaxes/: Elixir.sublime-syntax  TSX.sublime-syntax  TypeScript.sublime-syntax  Zig.sublime-syntax
test-md/: test.md
