[package]
name = "reed"
version = "0.1.0"
edition = "2024"
description = "Terminal markdown viewer powered by libghostty-vt"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
libghostty-vt = { git = "https://github.com/Uzaaft/libghostty-rs" }
serde = { version = "1.0.228", features = ["derive"] }
termimad = "0.34.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
toml = "1.1.0"
unicode-width = "0.2.2"
