[package]
name = "reed"
version = "0.3.1"
edition = "2024"
description = "Terminal markdown viewer powered by libghostty-vt"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
libghostty-vt = { git = "https://github.com/Uzaaft/libghostty-rs" }
regex = "1"
serde = { version = "1.0.228", features = ["derive"] }
termimad = "0.34.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
toml = "1.1.0"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
unicode-width = "0.2.2"
